2009-08-31  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/x86_64/fpu/bits/mathinline.h: Use __asm instead of asm.

2009-08-31  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10560]
	* malloc/malloc.c: Add local assert definition to avoid problems with
	memory allocation in the real one.

2009-08-27  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/init-arch.c (ENABLE_SSSE3_ON_ATOM):
	Removed.
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features): Don't
	turn off SSSE3 on Atom.

2009-08-28  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/tst-strtol.c (tests): More tests.
	* stdlib/tst-strtoll.c (tests): Likewise.

2009-08-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_isinf.c: New file.

	* sysdeps/ieee754/dbl-64/wordsize-64/s_isnan.c: New file.

2009-08-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_lround.c: Add llround aliases.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_llround.c: New file.

	* sysdeps/ieee754/dbl-64/wordsize-64/s_nearbyint.c: New file

	* sysdeps/ieee754/dbl-64/wordsize-64/s_rint.c: New file.

	* sysdeps/ieee754/dbl-64/wordsize-64/s_round.c: New file.

2009-08-25  Joseph Myers  <joseph@codesourcery.com>

	* math/s_fdiml.c (__fdiml): Use fpclassify instead of fpclassifyl.

2009-08-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/fpu/s_scalbln.c: New file.
	* sysdeps/x86_64/fpu/s_scalbn.c: New file.

	* sysdeps/ieee754/dbl-64/wordsize-64/s_scalbn.c: New file.

	* sysdeps/x86_64/fpu/s_signbit.S: New file.
	* sysdeps/x86_64/fpu/s_signbitf.S: New file.

	* sysdeps/ieee754/dbl-64/wordsize-64/s_lround.c: New file.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_trunc.c: New file.

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Remove
	leftover YMM_SIZE definition.

2009-08-24  Ulrich Drepper  <drepper@redhat.com>

	* math/math_private.h (ieee_double_shape_type): Add uint64_t word to
	union.
	(EXTRACT_WORDS64, INSERT_WORDS64): Define.